welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:33: error: ')' expected but ';' found.
  droite();avance();avance();
          ^